src/app/pages/recordings-list/recordings-list.page.scss
.new-background-color {
    --background: #33cccc;
}

.recordingiconcls {
    margin-right: 5%;
    font-size: 150%;
}

.grey-icon {
    color: #f1f5f5;
    width: 100%;
    font-size: 270% !important;
    margin-top: 0px !important;
}

.recording-btn {
    font-size: 270% !important;
    margin-top: 0px !important;
    color: #07bdbb;
    width: 100%;
}

.prgrs-bar {
    background-color: #07bdbb;
}

.prgrs-baar {
    width: 100% !important;
}

.voice-img {
    height: 80px !important;
    width: 97% !important;
}

.progrs-count {
    margin-top: 0px !important;
    padding-top: 0px !important;
    font-size: 13px !important;
    float: left;
}

.progrs-count-complete {
    margin-top: 0px !important;
    padding-top: 0px !important;
    font-size: 13px !important;
    float: right;
}

.card-text {
    font-weight: bold !important;
    color: #0e8d8c !important;
    margin-top: 0px !important;
    padding-top: 0px!important;
    font-size: 6vw !important;
    margin-bottom: 0;
}

.card-date {
    color: #b0abab !important;
    font-size: 14px !important;
    margin: 0;
}

.card-time {
    color: #b0abab !important;
    font-size: 14px !important;
    margin: -3px 0 0 0;
    text-align: right !important;
}

.sc-ion-buttons-md-h {
    color: #fff;
}

ion-card.ios.hydrated {
    box-shadow: 2px 2px 7px 2px #babdbd;
    border-radius: 10px;
}

.title {
    text-align: center;
    color: #fff;
}

.recordingiconcls {
    --ionicon-stroke-width: 30px;
    color: #fff;
}

ion-menu-button {
    color: #fff;
}

.listing-sec {
    border-radius: 14px;
    box-shadow: 1px 3px 10px 2px #babdbd;
    margin: 8px 15px 5px 15px;
}

.listing-sec ion-row {
    display: flex;
    align-items: flex-end;
}

.listing-sec .audio-icon {
    text-align: right;
    padding: 0;
}

.flex {
    display: flex;
    .question {
        width: calc(100% - 90px);
        flex: 0 0 calc(100% - 90px);
    }
}

.greyplay {
    width: 70px;
    min-width: 70px;
}

.card-time {
    text-align: right;
}


/**Ihpone 5**/

@media only screen and (min-device-width: 320px) and (max-height: 568px) {
    .recording-btn,
    .grey-icon {
        font-size: 240% !important;
    }
    .card-text {
        font-size: 65%;
    }
    .card-date {
        font-size: 31%;
        font-weight: 400;
    }
    .card-time {
        font-size: 50%;
        text-align: right;
    }
}


/**Galaxy Core**/

@media only screen and (min-device-width: 358px) and (max-height: 672px) {
    .recording-btn,
    .grey-icon {
        font-size: 300% !important;
    }
    .card-text {
        font-size: 85%;
    }
    .card-date {
        font-size: 50%;
        font-weight: 400;
    }
    .card-time {
        font-size: 50%;
        text-align: right;
    }
}


/**Ihpone 6**/

@media only screen and (min-device-width: 370px) and (max-height: 690px) {
    .recording-btn,
    .grey-icon {
        font-size: 270% !important;
    }
    .card-text {
        font-size: 70%;
    }
    .card-time {
        font-size: 60%;
        text-align: right;
    }
}


/**Ihpone X**/

@media only screen and (min-device-width: 372px) and (max-height: 820px) {
    .recording-btn,
    .grey-icon {
        font-size: 255% !important;
    }
    .card-text {
        font-size: 50%;
    }
    .card-time {
        font-size: 50%;
        text-align: right;
    }
}

@media only screen and (min-device-width: 410px) and (max-height: 830px) {
    .recording-btn,
    .grey-icon {
        font-size: 5.8rem !important;
        top: 15px;
        position: absolute;
    }
    .ion-card-header {
        padding-bottom: 10px;
    }
    .card-text {
        font-size: 103%;
    }
    .card-date {
        font-size: 50%;
        font-weight: 400;
    }
    .card-time {
        font-size: 60%;
        text-align: right;
    }
}

@media only screen and (min-device-width: 468px) and (max-height: 986px) {
    .recording-btn,
    .grey-icon {
        font-size: 355% !important;
    }
    .card-text {
        font-size: 88%;
    }
    .card-date {
        font-size: 70%;
        font-weight: 400;
    }
    .card-time {
        font-size: 90%;
        text-align: right;
    }
}

@media only screen and (min-device-width: 765px) and (max-height: 1030px) {
    .recording-btn,
    .grey-icon {
        font-size: 500% !important;
    }
    .card-text {
        font-size: 150%;
    }
    .card-time {
        font-size: 105%;
        text-align: right;
    }
    .card-date {
        font-size: 88%;
    }
}

@media only screen and (min-device-width: 1020px) and (max-height: 1370px) {
    .recording-btn,
    .grey-icon {
        font-size: 500% !important;
    }
    .card-text {
        font-size: 150%;
    }
    .card-time {
        font-size: 105%;
        text-align: right;
    }
    .card-date {
        font-size: 88%;
    }
}

ion-card-header {
    padding-bottom: 10;
}

